# pyfdhi

./: .gitignore  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  mkdocs.yml  pyproject.toml
.github/workflows/: python-app.yml  python-publish.yml
examples/: KEA23 Run Average Displacement.ipynb  KEA23 Run Displacement Model.ipynb  KEA23 Run Displacement Profile.ipynb  KEA23 Run Probability of Exceedance.ipynb  MR11 Run Displacement Model.ipynb  MR11 Run Displacement Profile.ipynb  PEA11 Run Average Displacement.ipynb  PEA11 Run Displacement Model.ipynb  PEA11 Run Displacement Profile.ipynb  WC94 Run Average Displacement.ipynb  WC94 Run Max Displacement.ipynb  YEA03 Run Displacement Model.ipynb  YEA03 Run Displacement Profile.ipynb
figures/compare_avg_disp/scripts/: calc_kea23_avg_displ.py  calc_wc94_avg_displ.py  plot_avg_displ_nm.py  plot_avg_displ_rv.py  plot_avg_displ_ss.py  proj_setup.py
figures/compare_mean_profiles/scripts/: calc_kea23_profiles.py  calc_mr11_profiles.py  calc_p11_profiles.py  calc_yea03_profiles.py  plot_profiles_nm.py  plot_profiles_rv.py  plot_profiles_ss.py  proj_setup.py
figures/plotting_styles/: plot_style.py
src/pyfdhi/: __init__.py  cli.py
src/pyfdhi/KuehnEtAl2023/: params.py  run_average_displacement.py  run_displacement_model.py  run_probability_exceedance.py
src/pyfdhi/MossRoss2011/: run_average_displacement.py  run_displacement_model.py  run_max_displacement.py
src/pyfdhi/PetersenEtAl2011/: run_average_displacement.py  run_displacement_model.py  run_displacement_profile.py
src/pyfdhi/WellsCoppersmith1994/: model_config.py  run_average_displacement.py  run_max_displacement.py
src/pyfdhi/YoungsEtAl2003/: run_displacement_model.py  run_displacement_profile.py
src/pyfdhi/disp/: __init__.py  kuehn_et_al_2023.py  model.py  moss_ross_2011.py
tests/KuehnEtAl2023/integration/: test_kea23_inputs.py  test_kea23_run_displacement_model.py  test_kea23_run_probability_exceedance.py
tests/KuehnEtAl2023/unit/: test_kea23_normal_mean-model.py  test_kea23_reverse_mean-model.py  test_kea23_strike-slip_mean-model.py
tests/MossRoss2011/integration/: test_mr11_inputs.py
tests/MossRoss2011/unit/: test_mr11_distrib_params_d_ad.py  test_mr11_distrib_params_d_md.py  test_mr11_distrib_params_mag_ad.py  test_mr11_distrib_params_mag_md.py
tests/PetersentEtAl2023/integration/: test_pea11_inputs.py  test_pea11_run_displacement_model.py
(+50 files in other folders)
