[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pyfdhi"
version = "0.0.1"
dependencies = [
    "matplotlib",
    "numpy",
    "pandas",
    "project-config",
    "scipy",
    "setuptools",
]
requires-python = ">= 3.8"
readme = "README.md"

[tool.hatch.envs.test]
dependencies = [
  "coverage[toml]",
  "pytest",
  "pytest-cov",
  "pytest-runner",
]

[tool.black]
line-length = 99
target-version = ['py310', 'py311']

[tool.isort]
profile = "black"
filter_files = true

[tool.ruff]
line-length = 99

[tool.hatch.envs.test.scripts]
run-coverage = "pytest --cov-config=pyproject.toml --cov=pkg --cov=tests"
run = "run-coverage --no-cov"

[tool.hatch.envs.style]
detached = true
dependencies = ["black", "isort"]

[tool.hatch.envs.style.scripts]
check = ["black --check --diff .", "isort --check-only --diff ."]
fmt = ["isort .", "black .", "check"]
