[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pyfdhi"
version = "0.0.1"
dependencies = [
    "click",
    "matplotlib",
    "numpy",
    "pandas",
    "project-config",
    "scipy",
    "setuptools",
]
requires-python = ">= 3.8"
readme = "README.md"

[project.scripts]
pyfdhi = "pyfdhi.cli:main"

[tool.black]
line-length = 99
target-version = ['py310']

[tool.isort]
profile = "black"
filter_files = true

[tool.ruff]
line-length = 99

[tool.hatch.envs.test]
dependencies = [
  "coverage[toml]",
  "pytest",
  "pytest-cov",
  "pytest-runner",
]

[tool.hatch.envs.test.scripts]
run-coverage = "pytest --cov-config=pyproject.toml --cov=pkg --cov=tests"
run-coverage-xml = "run-coverage --cov-report xml"
run = "run-coverage --no-cov"

[tool.hatch.envs.style]
detached = true
dependencies = ["black[jupyter]", "isort"]

[tool.hatch.envs.style.scripts]
check = ["black --check --diff .", "isort --check-only --diff ."]
fmt = ["isort .", "black .", "check"]

[tool.hatch.envs.docs]
dependencies = [
  "mkdocs",
  "markdown-callouts",
  "mkdocstrings[python]",
  "mkdocs-bibtex",
  "mkdocs-gen-files",
  "mkdocs-literate-nav",
  "mkdocs-material",
  "mkdocs-section-index",
  "mkdocs-jupyter",
  "black[jupyter]",
]
[tool.hatch.envs.docs.scripts]
build = "mkdocs build --clean --strict"
serve = "mkdocs serve --dev-addr localhost:8000"
